hard-gists/379cc31c29cfb5bdc9a0/run.log
=== Docker Run Log for 379cc31c29cfb5bdc9a0 ===
Started at: Mi 29. Okt 14:00:13 CET 2025

[2025-10-29 14:00:13] START: Running container for 379cc31c29cfb5bdc9a0
[2025-10-29 14:00:14] SUCCESS: Container 019cb1d6698c96ca0126cbe8d2aac4830be4652d5aba830a516d974189f59d67 started for 379cc31c29cfb5bdc9a0
=== Container logs for 379cc31c29cfb5bdc9a0 ===
  File "/snippet.py", line 137
    print "Epoch {}".format(epoch + 1)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 379cc31c29cfb5bdc9a0 ===
[2025-10-29 14:00:16] INFO: Container 019cb1d6698c96ca0126cbe8d2aac4830be4652d5aba830a516d974189f59d67 has stopped
